--- a/CLS Student Bowl Practice/CLS Student Bowl Practice.csproj
+++ b/CLS Student Bowl Practice/CLS Student Bowl Practice.csproj
@@ -78,6 +78,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CreateDatabase.cs" />
     <Compile Include="QuestionSelect.xaml.cs">
       <DependentUpon>QuestionSelect.xaml</DependentUpon>
     </Compile>
